Adjust default h2/h3 color to something more visible (bug 1046577)
Useful for the "Oh no!" error message - the app titles already
defined their own color in listing.styl.

--- a/src/media/css/site.styl
+++ b/src/media/css/site.styl
@@ -23,6 +23,10 @@ body {
   overflow-y: scroll;
 }
 
+h2, h3 {
+  color: $white;
+}
+
 header {
   background-image: url(../img/rocket-bg.svg);
   background-color: #7270C0;
